--- a/nuevoedituser.ui
+++ b/nuevoedituser.ui
@@ -1,55 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Edit_users</class>
- <widget class="QDialog" name="Edit_users">
+ <class>nuevoEditUser</class>
+ <widget class="QDialog" name="nuevoEditUser">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>701</width>
-    <height>572</height>
+    <width>645</width>
+    <height>375</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QTableWidget" name="tblUsuarios">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>100</y>
-     <width>481</width>
-     <height>361</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>40</y>
-     <width>251</width>
-     <height>26</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Lucida Bright</family>
-     <pointsize>13</pointsize>
-     <italic>true</italic>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>Lista de Miembros: </string>
-   </property>
-  </widget>
   <widget class="QWidget" name="widget_4" native="true">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>490</y>
-     <width>681</width>
+     <x>100</x>
+     <y>220</y>
+     <width>458</width>
      <height>50</height>
     </rect>
    </property>
@@ -68,7 +37,46 @@
      </spacer>
     </item>
     <item>
-     <widget class="QPushButton" name="eliminarUser">
+     <widget class="QPushButton" name="Guardar">
+      <property name="minimumSize">
+       <size>
+        <width>94</width>
+        <height>28</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Lucida Bright</family>
+        <italic>false</italic>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border: 1px solid rgb(24, 103, 155);
+border-radius: 5px;
+background-color: rgb(38, 162, 105);
+color: white;
+</string>
+      </property>
+      <property name="text">
+       <string>Guardar</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer_6">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QPushButton" name="Cancelar">
       <property name="minimumSize">
        <size>
         <width>94</width>
@@ -87,46 +95,7 @@ background-color: rgb(237, 51, 59);
 color: white;</string>
       </property>
       <property name="text">
-       <string>Eliminar Usuario</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <spacer name="horizontalSpacer_6">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item>
-     <widget class="QPushButton" name="addUser">
-      <property name="minimumSize">
-       <size>
-        <width>94</width>
-        <height>28</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <family>Lucida Bright</family>
-        <italic>false</italic>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">border: 1px solid rgb(24, 103, 155);
-border-radius: 5px;
-background-color: rgb(38, 162, 105);
-color: white;
-</string>
-      </property>
-      <property name="text">
-       <string>Agregar Usuario</string>
+       <string>Cancelar</string>
       </property>
      </widget>
     </item>
@@ -143,44 +112,53 @@ color: white;
       </property>
      </spacer>
     </item>
-    <item>
-     <widget class="QPushButton" name="editUser">
-      <property name="minimumSize">
-       <size>
-        <width>94</width>
-        <height>28</height>
-       </size>
-      </property>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="widget" native="true">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>90</y>
+     <width>274</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <layout class="QFormLayout" name="formLayout">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_2">
       <property name="font">
        <font>
         <family>Lucida Bright</family>
+        <pointsize>11</pointsize>
         <italic>false</italic>
+        <bold>false</bold>
        </font>
       </property>
-      <property name="styleSheet">
-       <string notr="true">border: 1px solid rgb(24, 103, 155);
-border-radius: 5px;
-background-color: rgb(38, 162, 105);
-color: white;
-</string>
-      </property>
       <property name="text">
-       <string>Editar Usuario</string>
+       <string>Nombre:</string>
       </property>
      </widget>
     </item>
-    <item>
-     <spacer name="horizontalSpacer_8">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="inNombre"/>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_3">
+      <property name="font">
+       <font>
+        <family>Lucida Bright</family>
+        <pointsize>11</pointsize>
+        <italic>false</italic>
+        <bold>false</bold>
+       </font>
       </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
+      <property name="text">
+       <string>Apellido:</string>
       </property>
-     </spacer>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="inApellido"/>
     </item>
    </layout>
   </widget>
