--- a/pagprincipal.ui
+++ b/pagprincipal.ui
@@ -7,98 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>621</height>
    </rect>
   </property>
   <property name="palette">
    <palette>
-    <active>
-     <colorrole role="Button">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>244</red>
-        <green>237</green>
-        <blue>193</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>244</red>
-        <green>237</green>
-        <blue>193</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>244</red>
-        <green>237</green>
-        <blue>193</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </active>
-    <inactive>
-     <colorrole role="Button">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>244</red>
-        <green>237</green>
-        <blue>193</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>244</red>
-        <green>237</green>
-        <blue>193</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>244</red>
-        <green>237</green>
-        <blue>193</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </inactive>
-    <disabled>
-     <colorrole role="Button">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>244</red>
-        <green>237</green>
-        <blue>193</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Base">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>244</red>
-        <green>237</green>
-        <blue>193</blue>
-       </color>
-      </brush>
-     </colorrole>
-     <colorrole role="Window">
-      <brush brushstyle="SolidPattern">
-       <color alpha="255">
-        <red>244</red>
-        <green>237</green>
-        <blue>193</blue>
-       </color>
-      </brush>
-     </colorrole>
-    </disabled>
+    <active/>
+    <inactive/>
+    <disabled/>
    </palette>
   </property>
   <property name="font">
@@ -378,7 +294,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>17</height>
+     <height>26</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -455,6 +371,9 @@
    <property name="text">
     <string>Nuevo &amp;miembro</string>
    </property>
+   <property name="toolTip">
+    <string>Agregar Miembro</string>
+   </property>
    <property name="font">
     <font>
      <family>Lucida Bright</family>
@@ -469,7 +388,7 @@
     <string>Nuevo &amp;ingreso</string>
    </property>
    <property name="toolTip">
-    <string>Nuevo ingreso</string>
+    <string>Nuevo Ingreso</string>
    </property>
    <property name="font">
     <font>
