--- a/iniciodesesion.ui
+++ b/iniciodesesion.ui
@@ -14,7 +14,7 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(161, 175, 255);</string>
+   <string notr="true">background-color: rgb(133, 193, 233 );</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -28,7 +28,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>52</height>
+       <height>27</height>
       </size>
      </property>
     </spacer>
@@ -54,7 +54,7 @@
         <property name="font">
          <font>
           <family>Lucida Bright</family>
-          <pointsize>24</pointsize>
+          <pointsize>34</pointsize>
           <italic>true</italic>
           <bold>true</bold>
          </font>
@@ -76,6 +76,34 @@
          </size>
         </property>
        </spacer>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QWidget" name="widget_3" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>100</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">border-image: url(:/recursos/usuario.png);</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -287,10 +315,13 @@ background-color: rgb(252, 255, 230);;
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>22</width>
-       <height>83</height>
+       <width>28</width>
+       <height>39</height>
       </size>
      </property>
     </spacer>
