--- a/nuevo_ing.ui
+++ b/nuevo_ing.ui
@@ -145,27 +145,7 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="label_3">
-           <property name="font">
-            <font>
-             <family>Lucida Bright</family>
-             <pointsize>10</pointsize>
-            </font>
-           </property>
-           <property name="text">
-            <string>Nombre:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="1">
-          <widget class="QLineEdit" name="lineEdit_2">
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(255, 255, 255);</string>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="0">
+         <item row="3" column="0">
           <widget class="QLabel" name="label_2">
            <property name="font">
             <font>
@@ -178,14 +158,7 @@
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
-          <widget class="QLineEdit" name="lineEdit">
-           <property name="styleSheet">
-            <string notr="true">background-color: rgb(255, 255, 255);</string>
-           </property>
-          </widget>
-         </item>
-         <item row="6" column="0">
+         <item row="5" column="0">
           <widget class="QLabel" name="label_5">
            <property name="font">
             <font>
@@ -198,14 +171,19 @@
            </property>
           </widget>
          </item>
-         <item row="6" column="1">
+         <item row="5" column="1">
           <widget class="QDoubleSpinBox" name="doubleSpinBox">
+           <property name="font">
+            <font>
+             <family>Segoe UI</family>
+            </font>
+           </property>
            <property name="styleSheet">
             <string notr="true">background-color: rgb(255, 255, 255);</string>
            </property>
           </widget>
          </item>
-         <item row="8" column="0" colspan="2">
+         <item row="7" column="0" colspan="2">
           <widget class="QLabel" name="label_6">
            <property name="font">
             <font>
@@ -218,7 +196,7 @@
            </property>
           </widget>
          </item>
-         <item row="9" column="1">
+         <item row="8" column="1">
           <widget class="QRadioButton" name="radioButton">
            <property name="font">
             <font>
@@ -230,7 +208,7 @@
            </property>
           </widget>
          </item>
-         <item row="10" column="1">
+         <item row="9" column="1">
           <widget class="QRadioButton" name="radioButton_2">
            <property name="font">
             <font>
@@ -242,7 +220,7 @@
            </property>
           </widget>
          </item>
-         <item row="11" column="1">
+         <item row="10" column="1">
           <widget class="QRadioButton" name="radioButton_3">
            <property name="font">
             <font>
@@ -254,7 +232,7 @@
            </property>
           </widget>
          </item>
-         <item row="12" column="1">
+         <item row="11" column="1">
           <widget class="QRadioButton" name="radioButton_4">
            <property name="font">
             <font>
@@ -266,7 +244,7 @@
            </property>
           </widget>
          </item>
-         <item row="13" column="1">
+         <item row="12" column="1">
           <widget class="QRadioButton" name="radioButton_5">
            <property name="font">
             <font>
@@ -275,6 +253,18 @@
            </property>
            <property name="text">
             <string>Otros</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QComboBox" name="comboBox">
+           <property name="font">
+            <font>
+             <family>Segoe UI</family>
+            </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(255, 255, 255);</string>
            </property>
           </widget>
          </item>
