--- a/categorias.ui
+++ b/categorias.ui
@@ -1,26 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MovEgreso</class>
- <widget class="QDialog" name="MovEgreso">
+ <class>Categorias</class>
+ <widget class="QDialog" name="Categorias">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>500</height>
+    <width>812</width>
+    <height>512</height>
    </rect>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>800</width>
-    <height>500</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>800</width>
-    <height>500</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -28,9 +16,21 @@
   <property name="styleSheet">
    <string notr="true">background-color: rgb(127, 179, 213 );</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QWidget" name="widget_2" native="true">
+     <property name="minimumSize">
+      <size>
+       <width>800</width>
+       <height>500</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>800</width>
+       <height>500</height>
+      </size>
+     </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <spacer name="horizontalSpacer">
@@ -62,12 +62,12 @@
             </font>
            </property>
            <property name="text">
-            <string>Egresos</string>
+            <string>Categorias</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QTableWidget" name="movEgresos">
+          <widget class="QTableWidget" name="tblCate">
            <property name="styleSheet">
             <string notr="true">background-color: rgb(255, 255, 255);</string>
            </property>
@@ -90,7 +90,7 @@
              </spacer>
             </item>
             <item>
-             <widget class="QPushButton" name="nuevo_egre">
+             <widget class="QPushButton" name="nuevo_cate">
               <property name="minimumSize">
                <size>
                 <width>94</width>
@@ -111,7 +111,7 @@ color: white;
 </string>
               </property>
               <property name="text">
-               <string>Nuevo egreso</string>
+               <string>Nueva categoria</string>
               </property>
              </widget>
             </item>
@@ -129,6 +129,32 @@ color: white;
              </spacer>
             </item>
             <item>
+             <widget class="QPushButton" name="editar_cate">
+              <property name="minimumSize">
+               <size>
+                <width>94</width>
+                <height>28</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <family>Lucida Bright</family>
+                <italic>false</italic>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">border: 1px solid rgb(24, 103, 155);
+border-radius: 5px;
+background-color: rgb(71, 151, 255);
+color: white;
+</string>
+              </property>
+              <property name="text">
+               <string>Editar categoria</string>
+              </property>
+             </widget>
+            </item>
+            <item>
              <spacer name="horizontalSpacer_11">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -142,7 +168,7 @@ color: white;
              </spacer>
             </item>
             <item>
-             <widget class="QPushButton" name="eliminar_egre">
+             <widget class="QPushButton" name="eliminar_cate">
               <property name="minimumSize">
                <size>
                 <width>94</width>
@@ -161,7 +187,7 @@ background-color: rgb(237, 51, 59);
 color: white;</string>
               </property>
               <property name="text">
-               <string>Eliminar egreso</string>
+               <string>Eliminar categoria</string>
               </property>
              </widget>
             </item>
