--- a/movingreso.ui
+++ b/movingreso.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>438</width>
-    <height>400</height>
+    <width>800</width>
+    <height>500</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>432</width>
-    <height>400</height>
+    <width>800</width>
+    <height>500</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>438</width>
-    <height>400</height>
+    <width>800</width>
+    <height>500</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -67,7 +67,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QTableView" name="movIngresos">
+          <widget class="QTableWidget" name="movIngresos">
            <property name="styleSheet">
             <string notr="true">background-color: rgb(255, 255, 255);</string>
            </property>
@@ -127,32 +127,6 @@ color: white;
                </size>
               </property>
              </spacer>
-            </item>
-            <item>
-             <widget class="QPushButton" name="editar_ingre">
-              <property name="minimumSize">
-               <size>
-                <width>94</width>
-                <height>28</height>
-               </size>
-              </property>
-              <property name="font">
-               <font>
-                <family>Lucida Bright</family>
-                <italic>false</italic>
-               </font>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">border: 1px solid rgb(24, 103, 155);
-border-radius: 5px;
-background-color: rgb(71, 151, 255);
-color: white;
-</string>
-              </property>
-              <property name="text">
-               <string>Editar ingreso</string>
-              </property>
-             </widget>
             </item>
             <item>
              <spacer name="horizontalSpacer_11">
