--- a/iniciodesesion.ui
+++ b/iniciodesesion.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="recursos.qrc">
+    <normaloff>:/recursos/presupuesto.png</normaloff>:/recursos/presupuesto.png</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(133, 193, 233 );</string>
   </property>
@@ -435,6 +439,8 @@ color: white;</string>
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="recursos.qrc"/>
+ </resources>
  <connections/>
 </ui>
