--- a/categorias.ui
+++ b/categorias.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="recursos.qrc">
+    <normaloff>:/recursos/presupuesto.png</normaloff>:/recursos/presupuesto.png</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(127, 179, 213 );</string>
   </property>
@@ -129,32 +133,6 @@ color: white;
              </spacer>
             </item>
             <item>
-             <widget class="QPushButton" name="editar_cate">
-              <property name="minimumSize">
-               <size>
-                <width>94</width>
-                <height>28</height>
-               </size>
-              </property>
-              <property name="font">
-               <font>
-                <family>Lucida Bright</family>
-                <italic>false</italic>
-               </font>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">border: 1px solid rgb(24, 103, 155);
-border-radius: 5px;
-background-color: rgb(71, 151, 255);
-color: white;
-</string>
-              </property>
-              <property name="text">
-               <string>Editar categoria</string>
-              </property>
-             </widget>
-            </item>
-            <item>
              <spacer name="horizontalSpacer_11">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -231,6 +209,8 @@ color: white;</string>
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="recursos.qrc"/>
+ </resources>
  <connections/>
 </ui>
